# router/section.go
@@ -10,5 +10,6 @@ func InitSectionRouter(Router *gin.RouterGroup) {
 	//.Use(middleware.JWTAuth())
 	{
 		ApiRouter.GET("/list", api.Sections)
+		ApiRouter.GET("/book/:bookId", api.SectionListByBookId)
 	}
 }
